# nexus-claw

./: .gitignore  README.md  RELATORIO_TESTES.md  config.example.yml  pyproject.toml  setup.py
src/nexus_claw/: __init__.py
src/nexus_claw/cli/: __init__.py  main.py
src/nexus_claw/config/: __init__.py  settings.py
src/nexus_claw/core/: __init__.py  agent.py  types.py
src/nexus_claw/dashboard/: __init__.py  server.py
src/nexus_claw/dashboard/static/: app.js  index.html  style.css
src/nexus_claw/llm/: __init__.py  client.py
src/nexus_claw/memory/: engine.py  store.py
src/nexus_claw/orchestra/: __init__.py  orchestrator.py  registry.py  worker.py
src/nexus_claw/skills/: __init__.py
