[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "nexus-claw"
version = "0.1.0"
description = "NexusClaw - Autonomous AI Assistant with Persistent Memory"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Jailton Fonseca", email = "fonsecac41@gmail.com"}
]
requires-python = ">=3.11"
keywords = ["ai", "agent", "autonomous", "memory", "assistant"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "openai>=1.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.2.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "pyyaml>=6.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
]
dashboard = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]
all = [
    "nexus-claw[dev,docs,dashboard]",
    "anthropic>=0.30.0",
    "discord.py>=2.3.0",
    "slack-sdk>=3.27.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["nexus_claw*"]

[project.scripts]
nexus-claw = "nexus_claw.cli.main:app"
nexus = "nexus_claw.cli.main:app"

[project.urls]
Homepage = "https://github.com/Jailtonfonseca/nexus-claw"
Repository = "https://github.com/Jailtonfonseca/nexus-claw"
Issues = "https://github.com/Jailtonfonseca/nexus-claw/issues"
